# egui-onig-test

./: Cargo.toml  LICENSE.txt  README.md
src/: caps.rs  main.rs
